; ModuleID = '/home/carl/AnghaBench/openpilot/phonelibs/json/src/extr_json.c_json_stringify.c'
source_filename = "/home/carl/AnghaBench/openpilot/phonelibs/json/src/extr_json.c_json_stringify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @json_stringify(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call i32 @sb_init(i32* %5)
  %7 = load i8*, i8** %4, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i32*, i32** %3, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @emit_value_indented(i32* %5, i32* %10, i8* %11, i32 0)
  br label %16

13:                                               ; preds = %2
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @emit_value(i32* %5, i32* %14)
  br label %16

16:                                               ; preds = %13, %9
  %17 = call i8* @sb_finish(i32* %5)
  ret i8* %17
}

declare dso_local i32 @sb_init(i32*) #1

declare dso_local i32 @emit_value_indented(i32*, i32*, i8*, i32) #1

declare dso_local i32 @emit_value(i32*, i32*) #1

declare dso_local i8* @sb_finish(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
